[gd_scene load_steps=4 format=3 uid="uid://dlrq4g51e2lc3"]

[ext_resource type="Script" path="res://Gameplay/Levels/Level.gd" id="1_rh4i0"]
[ext_resource type="Texture2D" uid="uid://cx3dj24psjabt" path="res://Assets/Images/Backgrounds/Castle Ballroom.png" id="2_pqssh"]
[ext_resource type="PackedScene" uid="uid://dwepmombeqesf" path="res://Menus/ui.tscn" id="3_4bl7i"]

[node name="Level" type="Node2D"]
script = ExtResource("1_rh4i0")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_pqssh")
centered = false

[node name="Team1Positions" type="Node" parent="."]

[node name="Team2Positions" type="Node" parent="."]

[node name="Heroes" type="Node" parent="."]

[node name="Team1Attacker" type="Marker2D" parent="."]
position = Vector2(840, 916)

[node name="Team2Attacker" type="Marker2D" parent="."]
position = Vector2(966, 916)

[node name="CanvasLayer" parent="." instance=ExtResource("3_4bl7i")]
